finished some introductory section of tutorials

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
     "titleBar.inactiveBackground": "#fcf4b299",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#fcf4b2"
+  "peacock.color": "#fcf4b2",
+  "liveServer.settings.port": 5501
 }
